--- a/My_site/main/templates/main/index.html
+++ b/My_site/main/templates/main/index.html
@@ -12,6 +12,7 @@
             <h3>{{el.title}}</h3>
             <p>{{el.task}}</p>
             <p>Максимальный балл: {{el.grade}}</p>
+            <p>Добавлено: {{el.data}}</p>
         </div>
     {% endfor %}
 {% else %}
